# esp-gatt-rs-demo

./: Cargo.toml  README.md  diagram.json  sdkconfig.defaults
.cargo/: config.toml
.devcontainer/: devcontainer.json
crates/espble/: Cargo.toml
crates/espble/src/: lib.rs
crates/espble/src/bt/: mod.rs  service.rs
crates/espble/src/bt/gatt/: mod.rs
scripts/: esp-flash.sh  flash.sh  web-flash.sh
src/: demo_ble.rs  example.rs  lib.rs  main.rs
src/ble/: demo.rs  gatt.rs  mod.rs
src/bt/: mod.rs  service.rs
src/bt/gatt/: data_transfer.rs
ssx10-esp/: Cargo.toml  wokwi.toml
ssx10-esp/docs/: README.md
ssx10-esp/scripts/: build.sh
