[workspace]
members = ["ssx10-esp", "crates/espble"]

[workspace.dependencies]
anyhow = "1.0.98"
log = "0.4"
esp-idf-svc = { version = "0.51", features = [
    "critical-section",
    "embassy-time-driver",
    "embassy-sync",
] }
enumset = { version = "1", default-features = false }
heapless = { version = "0.8", default-features = false }
embuild = "0.33"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["cj <power4j@outlook.com>"]
rust-version = "1.77"
