[package]
name = "esp-gatt-rs-demo"
version = "0.1.0"
authors = ["cj <power4j@outlook.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp-gatt-rs-demo"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[lib]
name = "ssx10_esp"
path = "src/lib.rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["experimental"]

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow = "1.0.98"
heapless = { version = "0.8", default-features = false }
enumset = { version = "1", default-features = false }

[build-dependencies]
embuild = "0.33"
